# rustemon-app

./: .gitignore
rustemon/: Cargo.toml
rustemon-rust/: Cargo.toml
rustemon-rust/src/: translate.rs  translate_name.rs
rustemon-rust/src/translate/: translate_location.rs
